--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -38,9 +38,9 @@ jobs:
         startDelay: 5
 
     - name: Run event conformance tests
-      uses: GoogleCloudPlatform/functions-framework-conformance/action@v1.1.1
+      uses: anniefu/functions-framework-conformance/action@goClone
       with:
-        version: 'v0.3.9'
+        version: 'v1.0.0'
         functionType: 'legacyevent'
         validateMapping: false
         useBuildpacks: false
@@ -48,9 +48,8 @@ jobs:
         startDelay: 5
 
     - name: Run CloudEvent conformance tests
-      uses: GoogleCloudPlatform/functions-framework-conformance/action@v1.1.1
+      uses: anniefu/functions-framework-conformance/action@goClone
       with:
-        version: 'v0.3.9'
         functionType: 'cloudevent'
         validateMapping: true
         useBuildpacks: false
