--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -29,7 +29,7 @@ jobs:
       run: 'go get github.com/GoogleCloudPlatform/functions-framework-conformance/client@v1.1.1 && go install github.com/GoogleCloudPlatform/functions-framework-conformance/client'
 
     - name: Run HTTP conformance tests
-      uses: GoogleCloudPlatform/functions-framework-conformance/action@v1.1.1
+      uses: anniefu/functions-framework-conformance/action@useTmp
       with:
         version: 'v0.3.9'
         functionType: 'http'
@@ -38,9 +38,9 @@ jobs:
         startDelay: 5
 
     - name: Run event conformance tests
-      uses: GoogleCloudPlatform/functions-framework-conformance/action@v1.1.1
+      uses: anniefu/functions-framework-conformance/action@useTmp
       with:
-        version: 'v0.3.9'
+        version: 'v1.0.0'
         functionType: 'legacyevent'
         validateMapping: false
         useBuildpacks: false
@@ -48,9 +48,8 @@ jobs:
         startDelay: 5
 
     - name: Run CloudEvent conformance tests
-      uses: GoogleCloudPlatform/functions-framework-conformance/action@v1.1.1
+      uses: anniefu/functions-framework-conformance/action@useTmp
       with:
-        version: 'v1.0.0'
         functionType: 'cloudevent'
         validateMapping: true
         useBuildpacks: false
